<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fbfcfd"
        tools:context=".CrearTrackFragment">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:autoSizeMinTextSize="12sp"
            android:background="#F4F5FB"
            android:gravity="center"
            android:text="Name_track:"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:translationX="100px" />

        <EditText
            android:id="@+id/name_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:translationX="100px"/>

        <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:autoSizeMinTextSize="12sp"
                android:background="#F4F5FB"
                android:gravity="center"
                android:text="Duration_track:"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:translationX="100px" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:autoSizeMinTextSize="12sp"
                android:background="#F4F5FB"
                android:gravity="center"
                android:text="Minutos:"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:translationX="100px" />

            <EditText
                android:id="@+id/duration_track_minutos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:translationX="100px"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:autoSizeMinTextSize="12sp"
                android:background="#F4F5FB"
                android:gravity="center"
                android:text="Segundos:"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:translationX="100px" />

            <EditText
                android:id="@+id/duration_track_segundos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:translationX="100px"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <Button
                android:id="@+id/button_track"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:text="Asociar Track"
                android:textColor="@color/black"
                android:layout_gravity="center"/>

        </LinearLayout>

    </FrameLayout>
</layout>