<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.AlbumDetailFragment">

    <TextView
        android:id="@+id/txt_no_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_first_fragment"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/albumdetailRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/album_detail_item">
    </androidx.recyclerview.widget.RecyclerView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/add_track"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Asociar Track"
        android:textColor="@color/black" />
    </LinearLayout>

</FrameLayout>