...
    <string name="title_collectorDetail">Detalle Coleccionista</string>

    <string name="title_artistDetail">Detalle Artista</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_musicians">Artistas</string>
    <string name="vinilos">Vinilos</string>
    <string name="artistas">Artistas</string>
    <string name="albumes">Álbumes</string>

    <string name="image">Image</string>
    <string name="coleccionistas">Coleccionistas</string>
    <string name="imageAlbumDetail">Imagen de la portada del álbum</string>
    <string name="imageArtistDetail">Foto del artista</string>

    <string name="hello_second_blank_fragment">Hello second_blank fragment</string>
    <string name="title_collectores">Coleccionistas</string>

...
