...
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/imageAlbumDetail"
                    android:foregroundGravity="center" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autoSizeMinTextSize="12sp"
                    android:background="#00FFFFFF"
                    android:gravity="center"
                    android:text="@{albumDetail.name}"
...
                    android:text="@{albumDetail.genre}"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autoSizeMinTextSize="12sp"
                    android:background="#00FFFFFF"
                    android:gravity="center"
                    android:text="@{albumDetail.recordLabel}"
...
